--- a/main.css
+++ b/main.css
@@ -1,3 +1,27 @@
+.button {
+  padding: 0.75rem 1.75rem 0.6rem 1.75rem;
+  border-radius: 0.25rem;
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  font-family: Raleway,sans-serif;
+  font-size: 16px;
+  cursor: pointer;
+  /* border: 1px solid rgb(189, 189, 189); */
+  color: red;
+  text-decoration: none;
+  background-color: white;
+  /* box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); */
+  box-shadow: none;
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.button:hover,
+.button:focus {
+  outline: none;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+
 .counter,.icon {
     max-width: 500px
 }
